# raytracing

./: .gitignore  Cargo.toml
examples/: cornell.rs  cornell_smoke.rs  final_scene.rs  perlin.rs  random_spheres.rs
src/: geometry.rs  lib.rs  main.rs  materials.rs  textures.rs
src/geometry/: shape.rs
