[package]
name = "raytracing"
version = "0.1.0"
authors = ["Sebastian Zivota <sebastian.zivota@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.5"
rand = "0.7.3"
rayon = "1.3.1"
noise = "0.6.0"
indicatif = "0.15.0"
